[package]
name = "grove-lcd-rgb"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
description = "Platform-agnostic driver for Grove LCD RGB Backlight using embedded-hal"
repository = "https://github.com/yourusername/grove-lcd-rgb"
keywords = ["embedded", "lcd", "grove", "embedded-hal-driver", "no-std"]
categories = ["embedded", "hardware-support", "no-std"]

[dependencies]
embedded-hal = "1.0"

[dev-dependencies]
# Add your target-specific dependencies for examples here